# silence-lint-error

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: build_publish.yaml  dependencies.yaml  tests.yaml
silence_lint_error/: comments.py  fix_silenced_error.py  fixing.py  noqa.py  silence_lint_error.py  silencing.py
silence_lint_error/cli/: fix_silenced_error.py  silence_lint_error.py
silence_lint_error/linters/: fixit.py  flake8.py  mypy.py  ruff.py  semgrep.py
tests/: comments_test.py  fixing_test.py  noqa_test.py
tests/cli/: fix_silenced_error_test.py  silence_lint_error_test.py
tests/fix_silenced_error/: fixit_test.py  ruff_test.py
tests/linters/: fixit_test.py  semgrep_test.py
tests/silence_lint_error/: fixit_test.py  flake8_test.py  ruff_test.py  semgrep_test.py
