[project]
name = "silence_lint_error"
version = "1.6.0"
authors = [
    {name = "Samuel Searles-Bryant", email = "sam@samueljsb.co.uk"},
]
description = "silence linting errors by adding ignore/fixme comments"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [  # pragma: alphabetize
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.9"
dependencies = [  # pragma: alphabetize[case-insensitive]
  "attrs",
  "tokenize-rt",
]

[project.scripts]
silence-lint-error = "silence_lint_error.cli.silence_lint_error:main"
fix-silenced-error = "silence_lint_error.cli.fix_silenced_error:main"

[project.urls]
Source = "https://github.com/samueljsb/silence-lint-error"
Changelog = "https://github.com/samueljsb/silence-lint-error/blob/main/CHANGELOG.md"


# Packaging
# ---------

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This is the default but we include it to be explicit.
include-package-data = true


# Mypy
# ====

[tool.mypy]
files = "."
exclude = [
  "build/",
  "venv",
]

pretty = true
show_error_codes = true

enable_error_code = [  # pragma: alphabetize
  "ignore-without-code",
  "possibly-undefined",
  "truthy-bool",
  "truthy-iterable",
]
strict = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false


# Pytest
# ======

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
]
filterwarnings = [
  "error::DeprecationWarning",
  "error::pytest.PytestCollectionWarning",
]
xfail_strict = true


# Coverage
# ========

[tool.coverage.run]
plugins = ["covdefaults"]
