[metadata]
name = silence_lint_error
version = 1.6.0
description = silence linting errors by adding ignore/fixme comments
long_description = file: README.md
long_description_content_type = text/markdown
author = Samuel Searles-Bryant
author_email = sam@samueljsb.co.uk
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Source = https://github.com/samueljsb/silence-lint-error
    Changelog = https://github.com/samueljsb/silence-lint-error/blob/main/CHANGELOG.md

[options]
install_requires =
    attrs
    tokenize-rt
python_requires = >=3.9

[options.entry_points]
console_scripts =
    silence-lint-error = silence_lint_error.cli.silence_lint_error:main
    fix-silenced-error = silence_lint_error.cli.fix_silenced_error:main

[options.extras_require]
dev =
    covdefaults
    coverage
    fixit
    flake8
    mypy
    pytest
    pytest-subprocess
    ruff
    semgrep

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[flake8]
extend-select = B9
extend-ignore = E501

[mypy]
check_untyped_defs = true
enable_error_code =
    truthy-bool
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_incomplete_defs = false
disallow_untyped_defs = false
